# SEMGAN

./: .gitignore  README.md  add_noise.py  pyproject.toml
src/: benchmarks.py  infer.py  train.py
src/config/: config.py  config.yaml
src/model/: utils.py
src/model/segan/: discriminator.py  generator.py
src/model/semgan/: discriminator.py  fourier_discriminator.py  mel_discriminator.py
src/utils/: add_noise.py  data.py  logger.py  model.py
